makes working tokens!

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 Some Python utilities to make [MapTool](http://www.rptools.net/toolbox/maptool/) tokens for Pathfinder NPCs/monsters/etc.
+
+Currently pretty specific to our particular campaign properties / etc.
